# agent-directline-oauth

./: .gitignore  README.md  pyproject.toml
docs/: api-reference.md  authentication.md  azure-setup-mckinsey.md  azure-setup.md  dlp-developer-environment.md  examples.md  troubleshooting.md
docs/examples/: simple_chat.py  web_app.py
src/cli/: __init__.py  main.py
src/copilot_directline/: __init__.py  auth.py  directline.py  models.py
